--- a/euchat.html
+++ b/euchat.html
@@ -52,7 +52,7 @@
 <div class="containereu">
 
   <div>
-    <label for="language">Design by Ameer</label>
+    <label for="language">Design by Husnain Shair</label>
     <select id="language">
       <option value="english">English - EN</option>
       <option value="dutch">Dutch - NL</option>
