--- a/euprice.html
+++ b/euprice.html
@@ -58,7 +58,7 @@
 
  
   <div>
-    <label for="language">Design by Ameer</label>
+    <label for="language">Design by Husnain Shair</label>
     <select id="language">
       <option value="english">English - EN</option>
       <option value="dutch">Dutch - NL</option>
