--- a/show.html
+++ b/show.html
@@ -25,7 +25,7 @@
 <!-- Display search results -->
 <div id="searchResults"></div>
 
-<div id="credit">Credit by Husnain Shair</div>
+<div id="credit">Credit by Apsra</div>
 
 <script>
     function pasteTextFromClipboard() {
