Added Name Of Apsra

--- a/price.html
+++ b/price.html
@@ -55,7 +55,7 @@
 
  
   <div>
-    <label for="language">Design by Apsra/label>
+    <label for="language">Design by Apsra</label>
     <select id="language">
       <option value="english">English £ - EN</option>
       <option value="englisheu">English € - EU</option>
