--- a/chat.html
+++ b/chat.html
@@ -52,7 +52,7 @@
 <div class="containereu">
 
   <div>
-    <label for="language">Design by Apsra/label>
+    <label for="language">Design by Apsra</label>
     <select id="language">
       <option value="english">English - EN</option>
       <option value="dutch">Dutch - NL</option>
