--- a/local.html
+++ b/local.html
@@ -58,7 +58,7 @@
 
  
   <div>
-    <label for="language">Design by Apsra/label>
+    <label for="language">Design by Apsra</label>
     <select id="language">
       <option value="english">English - EN</option>
       <option value="dutch">Dutch - NL</option>
