--- a/admin.html
+++ b/admin.html
@@ -335,16 +335,27 @@ window.onload = function() {
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
 <script>
-  const firebaseConfig = {
-  apiKey: "AIzaSyBX6ozbZ4N3lIS2116W-M-gtwJCh-5-aA0",
-  authDomain: "van-finder-d87f0.firebaseapp.com",
-  databaseURL: "https://van-finder-d87f0-default-rtdb.firebaseio.com",
-  projectId: "van-finder-d87f0",
-  storageBucket: "van-finder-d87f0.appspot.com",
-  messagingSenderId: "1025653106851",
-  appId: "1:1025653106851:web:1c7452232933825e94b716"
-};
+//   const firebaseConfig = {
+//   apiKey: "AIzaSyBX6ozbZ4N3lIS2116W-M-gtwJCh-5-aA0",
+//   authDomain: "van-finder-d87f0.firebaseapp.com",
+//   databaseURL: "https://van-finder-d87f0-default-rtdb.firebaseio.com",
+//   projectId: "van-finder-d87f0",
+//   storageBucket: "van-finder-d87f0.appspot.com",
+//   messagingSenderId: "1025653106851",
+//   appId: "1:1025653106851:web:1c7452232933825e94b716"
+// };
 
+
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBRXmSFrCJSe9TmjAllBIvWWSYdvBkF_Nc",
+  authDomain: "van-finder-fa5c0.firebaseapp.com",
+  projectId: "van-finder-fa5c0",
+  storageBucket: "van-finder-fa5c0.appspot.com",
+  messagingSenderId: "123991118365",
+  appId: "1:123991118365:web:bb71250a527c715eaeecf4",
+  measurementId: "G-NMGL0Q1WBB"
+};
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   const database = firebase.database();
