Updated the Database connectionin  Show.html

--- a/show.html
+++ b/show.html
@@ -198,15 +198,23 @@
 <script>
 
     // Replace with your Firebase configuration
-    const firebaseConfig = {
-  apiKey: "AIzaSyBX6ozbZ4N3lIS2116W-M-gtwJCh-5-aA0",
-  authDomain: "van-finder-d87f0.firebaseapp.com",
-  projectId: "van-finder-d87f0",
-  storageBucket: "van-finder-d87f0.appspot.com",
-  messagingSenderId: "1025653106851",
-  appId: "1:1025653106851:web:1c7452232933825e94b716"
+//     const firebaseConfig = {
+//   apiKey: "AIzaSyBX6ozbZ4N3lIS2116W-M-gtwJCh-5-aA0",
+//   authDomain: "van-finder-d87f0.firebaseapp.com",
+//   projectId: "van-finder-d87f0",
+//   storageBucket: "van-finder-d87f0.appspot.com",
+//   messagingSenderId: "1025653106851",
+//   appId: "1:1025653106851:web:1c7452232933825e94b716"
+// };
+const firebaseConfig = {
+  apiKey: "AIzaSyBRXmSFrCJSe9TmjAllBIvWWSYdvBkF_Nc",
+  authDomain: "van-finder-fa5c0.firebaseapp.com",
+  projectId: "van-finder-fa5c0",
+  storageBucket: "van-finder-fa5c0.appspot.com",
+  messagingSenderId: "123991118365",
+  appId: "1:123991118365:web:bb71250a527c715eaeecf4",
+  measurementId: "G-NMGL0Q1WBB"
 };
-
 // Initialize Firebase
 firebase.initializeApp(firebaseConfig);
 const database = firebase.database();
