--- a/welcome.html
+++ b/welcome.html
@@ -49,4 +49,9 @@
      }
    });
    </script>
+   <!-- Include Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-database.js"></script>
+
 </html>
